--- a/main.html
+++ b/main.html
@@ -101,6 +101,17 @@ position: relative; top: -33px;
 
 }
 
+  .comment2{
+  font-size : 18px;
+  text-align: center;
+  width: 800px;
+    font-weight: 1.5em;
+    color: #4C4C4C;
+    font-family: 'Noto Serif KR', sans-serif;
+    margin-left: 110px;
+
+}
+
    </style>
 </head>
 
@@ -122,6 +133,9 @@ position: relative; top: -33px;
     <a href="https://understanding-light.github.io/ChristmasTree/"><img id = "door" src = "http://mblogthumb4.phinf.naver.net/20111224_51/gml6058_1324707996940E7dW9_GIF/%C7%E3%B9%FA34.gif?type=w2" border="0"  width="400" height="300"></a>
 	</div>
   <div>  <p class = "para"><b> 보고 싶은 작품의 사진을 클릭하세요.</b></p></div>
+	
+	 <div>  <p class = "comment2"><b><u> 저의 작품의 특징과 방향성은 일상에서 바랬던 것들을 가상 세계인 컴퓨터를 통해 만들어내는 것 입니다.</u></b></p></div>
+	
     <div class="lineB"><div>
 	<div>
 <h1 id = "titleText2">작품 설명</h1>
