--- a/main.html
+++ b/main.html
@@ -75,6 +75,7 @@ position: relative; top: -33px;
 	height: 40px;
 	width : 860px;
 	 background-color: #4C4C4C;
+	margin-bottom : 70px;
 }
 #door {
 	display: block;
@@ -136,7 +137,7 @@ position: relative; top: -33px;
 	
 	 <div>  <p class = "comment2"><b><u> 저의 작품의 특징과 방향성은 일상에서 바랬던 것들을 가상 세계인 컴퓨터를 통해 만들어내는 것 입니다.</u></b></p></div>
 	
-    <div class="lineB"><div>
+    <div class="lineB"></div>
 	<div>
 <h1 id = "titleText2">작품 설명</h1>
  <p class = "comment"><b><첫 번째 작품 : 여름바다로 가는 문></b> 르네 마그리트의 "Summer"의 작품을 모방하여 응용한 작품.
